# advent-of-code

./: .gitignore  Cargo.toml  README.md
2024/: Cargo.toml  README.md
2024/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: config.rs  main.rs  utils.rs
cli/src/commands/: download.rs  mod.rs  new.rs  status.rs  submit.rs
common/: Cargo.toml
common/src/: benchmark.rs  grid.rs  lib.rs  nums.rs
template/: Cargo.toml  README.md
visualizer/: Cargo.toml
visualizer/examples/: bouncing_ball.rs
visualizer/src/: lib.rs
