[package]
name = "aoc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP client for downloading inputs and submitting
reqwest = { version = "0.12", features = ["blocking", "cookies"] }

# Error handling
anyhow = "1.0"

# File operations and path handling
dirs = "5.0"

# Date/time for advent calendar
chrono = "0.4"

# HTML parsing (for extracting problem descriptions)
scraper = "0.20"

# Terminal colors and formatting
colored = "2.1"

# Regular expressions
regex = "1.10"

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
